// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkTopCountries Table Component rendering it renders the IP Details NetworkTopCountries table 1`] = `
<Memo(NetworkTopCountriesTableComponent)
  data={
    Array [
      Object {
        "cursor": Object {
          "value": "8.8.8.8",
        },
        "node": Object {
          "destination": null,
          "network": Object {
            "bytes_in": 3826633497,
            "bytes_out": 1083495734,
          },
          "source": Object {
            "country": "DE",
            "destination_ips": 12,
            "flows": 12345,
            "source_ips": 55,
          },
        },
      },
      Object {
        "cursor": Object {
          "value": "9.9.9.9",
        },
        "node": Object {
          "destination": null,
          "network": Object {
            "bytes_in": 3826633497,
            "bytes_out": 1083495734,
          },
          "source": Object {
            "country": "US",
            "destination_ips": 12,
            "flows": 12345,
            "source_ips": 55,
          },
        },
      },
    ]
  }
  fakeTotalCount={50}
  flowTargeted="source"
  id="topCountriesSource"
  isInspect={false}
  loadPage={[MockFunction]}
  loading={false}
  showMorePagesIndicator={true}
  totalCount={524}
  type="details"
/>
`;

exports[`NetworkTopCountries Table Component rendering it renders the default NetworkTopCountries table 1`] = `
<Memo(NetworkTopCountriesTableComponent)
  data={
    Array [
      Object {
        "cursor": Object {
          "value": "8.8.8.8",
        },
        "node": Object {
          "destination": null,
          "network": Object {
            "bytes_in": 3826633497,
            "bytes_out": 1083495734,
          },
          "source": Object {
            "country": "DE",
            "destination_ips": 12,
            "flows": 12345,
            "source_ips": 55,
          },
        },
      },
      Object {
        "cursor": Object {
          "value": "9.9.9.9",
        },
        "node": Object {
          "destination": null,
          "network": Object {
            "bytes_in": 3826633497,
            "bytes_out": 1083495734,
          },
          "source": Object {
            "country": "US",
            "destination_ips": 12,
            "flows": 12345,
            "source_ips": 55,
          },
        },
      },
    ]
  }
  fakeTotalCount={50}
  flowTargeted="source"
  id="topCountriesSource"
  isInspect={false}
  loadPage={[MockFunction]}
  loading={false}
  showMorePagesIndicator={true}
  totalCount={524}
  type="page"
/>
`;
